--- a/style.css
+++ b/style.css
@@ -1,158 +1,156 @@
 body {
-    background-color: #f5f5f5;
+  background-color: #f5f5f5;
 }
 
 .factsMain {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .factsMainHeading {
-    max-width: 946px;
-    height: 103px;
-    font-family: sans-serif;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 96px;
-    line-height: 100%;
-    text-align: center;
-    letter-spacing: -0.05em;
-    flex: none;
+  max-width: 946px;
+  height: 103px;
+  font-family: sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 96px;
+  line-height: 100%;
+  text-align: center;
+  letter-spacing: -0.05em;
+  flex: none;
 
-    @media screen and (max-width: 950px) {
-        /* width: 650px;
+  @media screen and (max-width: 950px) {
+    /* width: 650px;
         height: 112px; */
-        font-size: 72px;
-        margin-top: 66px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    @media screen and (max-width: 650px) {
-        font-size: 52px;
-    }
+    font-size: 72px;
+    margin-top: 66px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  @media screen and (max-width: 650px) {
+    font-size: 52px;
+  }
 
-    @media screen and (max-width: 281px) {
-        /* width: 270px;
+  @media screen and (max-width: 281px) {
+    /* width: 270px;
         height: 112px; */
-        font-size: 52px;
-        margin-top: 66px;
-        margin-left: auto;
-        margin-right: auto;
-    }
+    font-size: 52px;
+    margin-top: 66px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .factsSecondaryHeading {
-    display: flex;
-    justify-content: space-around;
-    width: 946px;
-    height: 53px;
-    font-family: sans-serif;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 48px;
-    line-height: 110%;
-    letter-spacing: -0.03em;
-    margin-left: 30px;
+  display: flex;
+  justify-content: space-around;
+  width: 946px;
+  height: 53px;
+  font-family: sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 48px;
+  line-height: 110%;
+  letter-spacing: -0.03em;
+  margin-left: 30px;
 
-    @media screen and (max-width: 950px) {
-        width: 600px;
-        font-size: 40px;
-        line-height: 40px;
-        margin-top: 66px;
-        margin-left: 0px;
-    }
+  @media screen and (max-width: 950px) {
+    width: 600px;
+    font-size: 40px;
+    line-height: 40px;
+    margin-top: 66px;
+    margin-left: 0px;
+  }
 
-    @media screen and (max-width: 550px) {
-        width: 325px;
-        font-size: 40px;
-        line-height: 40px;
-        margin: 66px 0 66px 0;
-    }
+  @media screen and (max-width: 550px) {
+    width: 325px;
+    font-size: 40px;
+    line-height: 40px;
+    margin: 66px 0 66px 0;
+  }
 
-    @media screen and (max-width: 650px) {
-        margin: 44px 0 36px 0;
-    }
-
-    @media screen and (max-width: 280px) {
-        width: 270px;
-        font-size: 32px;
-        line-height: 40px;
-        margin-top: 66px;
-        margin-bottom: 66px;
-        margin-left: 0px;
-    }
+  @media screen and (max-width: 650px) {
+    margin: 44px 0 36px 0;
+  }
 }
 
 .factList {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .factItem {
-    display: flex;
-    border-bottom: 2px solid #e6e6e6;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 0px;
+  display: flex;
+  border-bottom: 2px solid #e6e6e6;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 0px;
 }
 
-.factDesription {
-    width: 708px;
-    min-height: 65px;
-    font-family: sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 36px;
-    line-height: 40px;
-    letter-spacing: -0.03em;
-    display: flex;
-    align-items: center;
+.accordion {
+  width: 800px;
+  margin: 90px auto;
+  color: black;
+  background-color: white;
+  padding: 45px 45px;
+  @media screen and (max-width: 650px) {
+    margin: 30px auto;
+    width: 300px;
+  }
+}
 
-    @media screen and (max-width: 950px) {
-        font-size: 24px;
-        width: 650px;
-        line-height: 31px;
-    }
+.accordion .container {
+  position: relative;
+  margin: 10px 10px;
+}
 
-    @media screen and (max-width: 900px) {
-        width: 600px;
-    }
+.accordion .label {
+  position: relative;
+  padding: 10px 0;
+  font-size: 30px;
+  color: black;
+  cursor: pointer;
+}
 
-    @media screen and (max-width: 850px) {
-        width: 550px;
-    }
+.accordion .label::before {
+  content: "+";
+  color: black;
+  position: absolute;
+  top: 50%;
+  right: -5px;
+  font-size: 30px;
+  transform: translateY(-50%);
+}
 
-    @media screen and (max-width: 800px) {
-        width: 500px;
-    }
+/* Hides the content (height: 0), decreases font size, justifies text and adds transition */
 
-    @media screen and (max-width: 750px) {
-        width: 450px;
-    }
+.accordion .content {
+  position: relative;
+  background: white;
+  height: 0;
+  font-size: 20px;
+  text-align: justify;
+  overflow: hidden;
+  transition: 0.5s;
+}
 
-    @media screen and (max-width: 700px) {
-        width: 400px;
-    }
+/* Adds a horizontal line between the contents */
 
-    @media screen and (max-width: 650px) {
-        width: 350px;
-    }
+.accordion hr {
+  width: 100;
+  margin-left: 0;
+  border: 1px solid grey;
+}
 
-    @media screen and (max-width: 600px) {
-        width: 300px;
-    }
+.accordion .container.active .content {
+  height: 150px;
+}
 
-    @media screen and (max-width: 550px) {
-        width: 260px;
-    }
+/* Changes from plus sign to negative sign once active */
 
-    @media screen and (max-width: 376px) {
-        width: 230px;
-    }
-
-    @media screen and (max-width: 281px) {
-        width: 170px;
-    }
+.accordion .container.active .label::before {
+  content: "-";
+  font-size: 30px;
 }
