--- a/style.css
+++ b/style.css
@@ -1,5 +1,24 @@
 body {
-  background-color: #f5f5f5;
+  background-color: #7f7fd7;
+  font-family: Roboto;
+}
+
+.logo-div {
+    display: flex;
+    justify-content: center;
+    border-bottom: 1.5px solid #7f7fd7;
+    margin: 0 10px;
+    height: 45px;
+}
+
+.logo-div:hover {
+    background-color: black;
+    border-radius: 8px;
+}
+
+.logo-div img {
+    width: 100%;
+    height: 100%;
 }
 
 .factsMain {
@@ -22,8 +41,6 @@ body {
   flex: none;
 
   @media screen and (max-width: 950px) {
-    /* width: 650px;
-        height: 112px; */
     font-size: 72px;
     margin-top: 66px;
     margin-left: auto;
@@ -34,8 +51,6 @@ body {
   }
 
   @media screen and (max-width: 281px) {
-    /* width: 270px;
-        height: 112px; */
     font-size: 52px;
     margin-top: 66px;
     margin-left: auto;
@@ -94,9 +109,11 @@ body {
   margin: 90px auto;
   color: black;
   background-color: white;
-  padding: 45px 45px;
+  padding: 35px 30px;
+  transition: .3s all ease-in-out;
   @media screen and (max-width: 650px) {
     margin: 30px auto;
+    padding: 15px 10px;
     width: 250px;
   }
   @media screen and (min-width: 650px) and (max-width: 1000px) {
@@ -108,22 +125,30 @@ body {
 .accordion .container {
   position: relative;
   margin: 10px 10px;
+  border-bottom: 1.5px solid #7f7fd7;
+  transition: .3s all ease-in-out;
 }
 
 .accordion .label {
   position: relative;
   padding: 10px 0;
-  font-size: 30px;
+  font-size: 18px;
   color: black;
   cursor: pointer;
+  text-align: center;
+}
+.accordion .label:hover {
+    background-color: black;
+    color: #fff;
+    border-radius: 8px;
 }
 
 .accordion .label::before {
   content: "+";
-  color: black;
+  color: #7f7fd7;
   position: absolute;
   top: 50%;
-  right: -5px;
+  right: 5px;
   font-size: 30px;
   transform: translateY(-50%);
 }
@@ -149,7 +174,11 @@ body {
 }
 
 .accordion .container.active .content {
-  height: 100px;
+  min-height: 90px;
+  max-height: 100px;
+  @media screen and (max-width: 650px) {
+    overflow-y: scroll;
+  }
 }
 
 /* Changes from plus sign to negative sign once active */
